@@ -6,15 +6,15 @@ module.exports = Response;
  * Provides a convenient interface for setting various properties of the
  * response.
  *
- *   var res = new Response(status, headers, body);
+ *   var res = new Response(body, headers, status);
  *   res.addHeader("Content-Length", "123");
  *   res.setCookie("cookieName", "cookieValue");
- *   callback(res.status, res.headers, res.body);
+ *   res.send(callback);
  */
-function Response(status, headers, body) {
-    this.status = status || 200;
-    this.headers = headers || {};
+function Response(body, headers, status) {
     this.body = body || "";
+    this.headers = headers || {};
+    this.status = status || 200;
 }
 
 /**
@@ -26,13 +26,14 @@ Response.prototype.send = function send(callback) {
 
 /**
  * Returns `true` if this response is empty, `false` otherwise.
+ * Note: This is determined by the status code, not the actual body.
  */
 Response.prototype.__defineGetter__("empty", function empty() {
     if (this.body === "") {
         return true;
     }
 
-    return utils.STATUS_WITH_NO_ENTITY_BODY.indexOf(this.status) !== -1;
+    return utils.emptyBody(this.status);
 });
 
 /**
