@@ -37,7 +37,7 @@ function sessionCookie(app, options) {
             }
 
             app(env, function (status, headers, body) {
-                var res = new Response(status, headers, body);
+                var res = new Response(body, headers, status);
                 writeSession(env, res);
                 res.send(callback);
             });
